[gd_scene load_steps=33 format=2]

[ext_resource path="res://skeleton_axe.png" type="Texture" id=1]
[ext_resource path="res://Trab godot.jpg" type="Texture" id=2]
[ext_resource path="res://character2.png" type="Texture" id=3]
[ext_resource path="res://personagem.gd" type="Script" id=4]
[ext_resource path="res://Bau_esquerda.PNG" type="Texture" id=5]
[ext_resource path="res://Bau_direita.PNG" type="Texture" id=6]
[ext_resource path="res://Bau_baixo.PNG" type="Texture" id=7]
[ext_resource path="res://coracao2.webp" type="Texture" id=8]
[ext_resource path="res://Tempo_jogo.gd" type="Script" id=9]
[ext_resource path="res://principal.gd" type="Script" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 56, 49.75 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 55, 49.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 18, 100.5 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 16.5, 33.5 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 16.5, 32 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 301.663, 383.532 )

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 15, 19 )

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 18, 21 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 40, 115.5 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 39.5, 164.25 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 80.7249, 125.045 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 82.8339, 125.045 )

[sub_resource type="RectangleShape2D" id=20]
extents = Vector2( 11.5, 9.5 )

[sub_resource type="RectangleShape2D" id=19]
extents = Vector2( 11.5, 9.5 )

[sub_resource type="RectangleShape2D" id=21]
extents = Vector2( 10.5, 10 )

[sub_resource type="RectangleShape2D" id=22]
extents = Vector2( 11, 9 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 17.1247, 25.5529 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 19.9085, 29.7605 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 26.8763, 18.8483 )

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 26.3786, 19.3443 )

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 25.3833, 17.8563 )

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 15.429, 21.8244 )

[node name="principal" type="Node2D"]
script = ExtResource( 10 )

[node name="cenario" type="StaticBody2D" parent="."]

[node name="muralha1" type="CollisionPolygon2D" parent="cenario"]
position = Vector2( 13.3306, 14.3392 )
scale = Vector2( 0.42041, 0.426432 )
polygon = PoolVector2Array( 371, 38, 373, 141, 373, 233, 530, 235, 537, 352, 596, 361, 737, 361, 741, 330, 578, 323, 575, 197, 411, 195, 414, 38 )

[node name="muralha2" type="CollisionPolygon2D" parent="cenario"]
position = Vector2( 13.3306, 14.3392 )
scale = Vector2( 0.42041, 0.426432 )
polygon = PoolVector2Array( 29, 372, 29, 403, 153, 408, 155, 455, 312, 467, 317, 653, 162, 653, 162, 698, 312, 700, 317, 812, 319, 910, 139, 919, 146, 957, 315, 960, 467, 962, 469, 1212, 472, 1357, 474, 1414, 510, 1416, 514, 1305, 512, 1176, 517, 1031, 514, 926, 362, 917, 369, 748, 686, 746, 688, 710, 365, 710, 365, 541, 365, 439, 348, 424, 186, 417, 184, 369 )

[node name="muralha3" type="CollisionPolygon2D" parent="cenario"]
position = Vector2( 453.5, 352.5 )
scale = Vector2( 0.42041, 0.426432 )
polygon = PoolVector2Array( 65, -54, 95, -52, 97, -33, 284, -35, 396, -33, 397, 131, 254, 135, 258, 391, 261, 499, 362, 510, 516, 510, 654, 509, 775, 512, 816, 520, 815, 641, 784, 641, 781, 545, 647, 543, 505, 545, 367, 543, 226, 539, 224, 448, 224, 358, 226, 294, 226, 228, 229, 137, 228, 110, 282, 101, 365, 103, 365, 1, 237, -1, 101, -3, 95, 10, 63, 14 )

[node name="muralha4" type="CollisionPolygon2D" parent="cenario"]
position = Vector2( 453.5, 352.5 )
scale = Vector2( 0.42041, 0.426432 )
polygon = PoolVector2Array( 59, -238, 90, -237, 91, -216, 243, -220, 445, -218, 557, -220, 673, -220, 797, -220, 819, -223, 819, -318, 717, -318, 575, -322, 457, -322, 325, -322, 329, -356, 445, -356, 541, -356, 633, -352, 709, -350, 843, -350, 849, -296, 847, -226, 851, -186, 717, -184, 587, -188, 425, -188, 323, -186, 221, -184, 95, -180, 88, -169, 61, -170, 59, -218 )

[node name="pedra_direita" type="CollisionShape2D" parent="cenario"]
position = Vector2( 844.481, 53.1445 )
scale = Vector2( 0.42041, 0.426432 )
shape = SubResource( 1 )

[node name="pedra_esquerda" type="CollisionShape2D" parent="cenario"]
position = Vector2( 679.26, 54.6371 )
scale = Vector2( 0.42041, 0.426432 )
shape = SubResource( 2 )

[node name="parede1" type="CollisionShape2D" parent="cenario"]
position = Vector2( 664.546, 120.308 )
scale = Vector2( 0.42041, 0.426432 )
shape = SubResource( 3 )

[node name="parede2" type="CollisionPolygon2D" parent="cenario"]
position = Vector2( 453.5, 352.5 )
scale = Vector2( 0.42041, 0.426432 )
polygon = PoolVector2Array( 781, -40, 850, -40, 850, 98, 850, 300, 854, 395, 813, 395, 817, 288, 822, 150, 546, 148, 546, 114, 815, 112, 815, -4, 779, -7 )

[node name="ponte_dir" type="CollisionShape2D" parent="cenario"]
position = Vector2( 354.493, 339.92 )
scale = Vector2( 0.42041, 0.426432 )
shape = SubResource( 5 )

[node name="ponte_esq" type="CollisionShape2D" parent="cenario"]
position = Vector2( 355.755, 263.376 )
scale = Vector2( 0.42041, 0.426432 )
shape = SubResource( 6 )

[node name="borda_mapa" type="CollisionPolygon2D" parent="cenario"]
polygon = PoolVector2Array( 45, 15, 683, 15, 895, 16, 895, 114, 891, 695, 15, 692, 11, 24, 22, 24, 22, 147, 23, 679, 348, 680, 882, 680, 883, 533, 884, 25, 356, 24, 32, 23, 11, 23, 11, 16 )

[node name="TrabGodot" type="Sprite" parent="cenario"]
position = Vector2( 453.5, 352.5 )
scale = Vector2( 0.42041, 0.426432 )
texture = ExtResource( 2 )

[node name="placar" type="Label" parent="."]
margin_left = 28.0
margin_top = 25.0
margin_right = 166.0
margin_bottom = 51.0

[node name="vida" type="Label" parent="."]
margin_left = 26.0
margin_top = 49.0
margin_right = 107.0
margin_bottom = 71.0

[node name="inimigos" type="StaticBody2D" parent="."]
position = Vector2( 44, -305 )
collision_layer = 4
collision_mask = 4

[node name="sprite" type="Sprite" parent="inimigos"]
position = Vector2( 6.75, 528.625 )
scale = Vector2( 0.0646417, 0.0625763 )
texture = ExtResource( 1 )

[node name="Sprite2" type="Sprite" parent="inimigos"]
position = Vector2( 692, 675 )
scale = Vector2( 0.0510124, 0.0510124 )
texture = ExtResource( 1 )

[node name="Sprite3" type="Sprite" parent="inimigos"]
position = Vector2( 452, 466.551 )
scale = Vector2( 0.0560746, 0.0560746 )
texture = ExtResource( 1 )

[node name="col_inimigo1" type="CollisionShape2D" parent="inimigos"]
position = Vector2( 7.24994, 528.625 )
scale = Vector2( 0.0646417, 0.0625763 )
shape = SubResource( 7 )

[node name="col_inimigo2" type="CollisionShape2D" parent="inimigos"]
position = Vector2( 692, 675 )
shape = SubResource( 17 )

[node name="col_inimigo3" type="CollisionShape2D" parent="inimigos"]
position = Vector2( 451, 466 )
shape = SubResource( 18 )

[node name="col_agua1" type="CollisionShape2D" parent="inimigos"]
position = Vector2( 371, 449.5 )
shape = SubResource( 10 )

[node name="col_agua2" type="CollisionShape2D" parent="inimigos"]
position = Vector2( 369.5, 819.75 )
shape = SubResource( 11 )

[node name="personagem" type="KinematicBody2D" parent="."]
position = Vector2( 71, 74 )
scale = Vector2( 0.12732, 0.112852 )
script = ExtResource( 4 )

[node name="col_personagem" type="CollisionShape2D" parent="personagem"]
position = Vector2( 290.246, 402.167 )
shape = SubResource( 4 )

[node name="personagem_spr" type="Sprite" parent="personagem"]
position = Vector2( 261.012, 392.318 )
scale = Vector2( 0.67672, 0.67672 )
texture = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="personagem"]
position = Vector2( 253.157, 330.289 )
collision_layer = 4
collision_mask = 4

[node name="col_item" type="CollisionShape2D" parent="personagem/Area2D"]
position = Vector2( 42.8339, 71.878 )
shape = SubResource( 8 )

[node name="Vida_extra" type="StaticBody2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="Sprite" type="Sprite" parent="Vida_extra"]
position = Vector2( 589, 479 )
scale = Vector2( 0.0230469, 0.0230469 )
texture = ExtResource( 8 )

[node name="col_vida1" type="CollisionShape2D" parent="Vida_extra"]
position = Vector2( 588.5, 478.5 )
shape = SubResource( 20 )

[node name="vida_extra2" type="StaticBody2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="Sprite2" type="Sprite" parent="vida_extra2"]
position = Vector2( 198, 372 )
scale = Vector2( 0.0234862, 0.0234862 )
texture = ExtResource( 8 )

[node name="col_vida2" type="CollisionShape2D" parent="vida_extra2"]
position = Vector2( 197.5, 371.5 )
shape = SubResource( 19 )

[node name="vida_extra3" type="StaticBody2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="Sprite3" type="Sprite" parent="vida_extra3"]
position = Vector2( 777, 238 )
scale = Vector2( 0.0222656, 0.0222656 )
texture = ExtResource( 8 )

[node name="col_vida3" type="CollisionShape2D" parent="vida_extra3"]
position = Vector2( 776.5, 238 )
shape = SubResource( 21 )

[node name="vida_extra4" type="StaticBody2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="Sprite4" type="Sprite" parent="vida_extra4"]
position = Vector2( 777, 374 )
scale = Vector2( 0.0199219, 0.0199219 )
texture = ExtResource( 8 )

[node name="col_vida4" type="CollisionShape2D" parent="vida_extra4"]
position = Vector2( 777, 375 )
shape = SubResource( 22 )

[node name="Bau1" type="StaticBody2D" parent="."]
position = Vector2( -94, -516 )
scale = Vector2( 1.0046, 1.00805 )
collision_layer = 4
collision_mask = 4

[node name="Sprite" type="Sprite" parent="Bau1"]
position = Vector2( 207.436, 763.334 )
scale = Vector2( 0.452162, 0.43851 )
texture = ExtResource( 5 )

[node name="col_bau1" type="CollisionShape2D" parent="Bau1"]
position = Vector2( 208.246, 765.082 )
shape = SubResource( 9 )

[node name="Bau2" type="StaticBody2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="Sprite2" type="Sprite" parent="Bau2"]
position = Vector2( 114, 356 )
scale = Vector2( 0.46315, 0.46474 )
texture = ExtResource( 5 )

[node name="col_bau2" type="CollisionShape2D" parent="Bau2"]
position = Vector2( 115, 357 )
scale = Vector2( 1.0046, 1.00805 )
shape = SubResource( 12 )

[node name="Bau3" type="StaticBody2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="Sprite3" type="Sprite" parent="Bau3"]
position = Vector2( 491, 387 )
scale = Vector2( 0.443473, 0.444996 )
texture = ExtResource( 7 )

[node name="col_bau3" type="CollisionShape2D" parent="Bau3"]
position = Vector2( 491, 387 )
scale = Vector2( 1.0046, 1.00805 )
shape = SubResource( 13 )

[node name="Bau4" type="StaticBody2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="Sprite4" type="Sprite" parent="Bau4"]
position = Vector2( 548, 56.9998 )
scale = Vector2( 0.449849, 0.451394 )
texture = ExtResource( 7 )

[node name="col_bau4" type="CollisionShape2D" parent="Bau4"]
position = Vector2( 548.5, 57.4998 )
scale = Vector2( 1.0046, 1.00805 )
shape = SubResource( 14 )

[node name="Bau5" type="StaticBody2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="Sprite5" type="Sprite" parent="Bau5"]
position = Vector2( 615, 56.9998 )
scale = Vector2( 0.439101, 0.440609 )
texture = ExtResource( 7 )

[node name="col_bau5" type="CollisionShape2D" parent="Bau5"]
position = Vector2( 615.5, 55.9998 )
scale = Vector2( 1.0046, 1.00805 )
shape = SubResource( 15 )

[node name="Bau6" type="StaticBody2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="Sprite6" type="Sprite" parent="Bau6"]
position = Vector2( 282, 121 )
scale = Vector2( 0.447254, 0.44879 )
texture = ExtResource( 6 )

[node name="col_bau6" type="CollisionShape2D" parent="Bau6"]
position = Vector2( 283.5, 121 )
scale = Vector2( 1.0046, 1.00805 )
shape = SubResource( 16 )

[node name="Tempo_jogo" type="Node2D" parent="."]
script = ExtResource( 9 )

[node name="tempo" type="Label" parent="Tempo_jogo"]
margin_left = 342.0
margin_top = 34.0
margin_right = 510.0
margin_bottom = 52.0
text = "Tempo: "

[node name="minuto" type="Label" parent="Tempo_jogo"]
margin_left = 432.0
margin_top = 35.0
margin_right = 472.0
margin_bottom = 49.0
text = "00"

[node name="segundo" type="Label" parent="Tempo_jogo"]
margin_left = 452.0
margin_top = 35.0
margin_right = 492.0
margin_bottom = 49.0
text = "00"

[node name="Timer" type="Timer" parent="Tempo_jogo"]
wait_time = 0.05
autostart = true

[connection signal="body_entered" from="personagem/Area2D" to="personagem" method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Tempo_jogo/Timer" to="Tempo_jogo" method="_on_Timer_timeout"]
